--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
     url: jdbc:mysql://123.57.239.38:3306/kshop
 mybatis:
   mapper-locations: classpath:mybatis/mapper/*.xml
+  type-aliases-package: oxy.kshop.entity
 logging:
   level:
     oxy.kshop.controller: debug
